--- a/update_push_count.yml
+++ b/update_push_count.yml
@@ -2,23 +2,26 @@ name: Update Push Count
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Run every day at midnight UTC
+    - cron: "0 0 * * *"
 
 jobs:
-  update_push_count:
+  update-push-count:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Update Push Count
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          
-          push_count=$(git rev-list --count HEAD)
-          echo "Pushes: $push_count" > pushes.md
-          
-          git add pushes.md
-          git commit -m "Update push count"
-          git push
+    steps:
+    - name: Check out repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Update Push Count
+      run: node update_push_count.js
+      env:
+        GITHUB_TOKEN: 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
+        README_PATH: 'README.md'
